--- a/index.html
+++ b/index.html
@@ -371,4 +371,379 @@
       const yesBtn = document.getElementById("yes");
       const container = document.getElementById("btnContainer");
       const messageCard = document.getElementById("messageCard");
-      const typewriterEl = document.getElementById("ty
+      const typewriterEl = document.getElementById("typewriter");
+      const titleLine = document.getElementById("titleLine");
+      const heartLayer = document.getElementById("heartLayer");
+
+      // Safety check
+      if (!noBtn || !yesBtn || !container || !messageCard || !typewriterEl || !titleLine || !heartLayer) {
+        console.error("Missing IDs. Check: no, yes, btnContainer, messageCard, typewriter, titleLine, heartLayer");
+        return;
+      }
+
+      titleLine.textContent = titleText;
+
+      /**********************
+       * Typewriter effect
+       **********************/
+      function typeWriter(lines, speed = 22, linePause = 420){
+        typewriterEl.innerHTML = "";
+        const full = lines.map(l => l.replace(/</g,"&lt;").replace(/>/g,"&gt;"));
+        let li = 0, ci = 0;
+
+        function tick(){
+          if(li >= full.length) return;
+
+          const current = full[li];
+          if(ci < current.length){
+            typewriterEl.innerHTML =
+              full.slice(0, li).map(l => l + "<br>").join("") +
+              current.slice(0, ci + 1) +
+              "<span style='opacity:.6'>|</span>";
+            ci++;
+            setTimeout(tick, speed);
+          } else {
+            typewriterEl.innerHTML =
+              full.slice(0, li + 1).map(l => l + "<br>").join("");
+            li++;
+            ci = 0;
+            setTimeout(tick, linePause);
+          }
+        }
+        tick();
+      }
+      typeWriter(loveLetterLines);
+
+      /**********************
+       * Floating hearts background
+       **********************/
+      const floatHearts = ["💖","💕","💘","💗","💞","✨"];
+      function spawnFloatHeart(){
+        const el = document.createElement("div");
+        el.className = "float-heart";
+        el.textContent = floatHearts[Math.floor(Math.random()*floatHearts.length)];
+        el.style.left = (Math.random()*100) + "vw";
+        el.style.fontSize = (14 + Math.random()*18) + "px";
+        el.style.animationDuration = (4500 + Math.random()*4500) + "ms";
+        el.style.opacity = (0.35 + Math.random()*0.35).toFixed(2);
+        heartLayer.appendChild(el);
+        setTimeout(()=>el.remove(), 10000);
+      }
+      setInterval(spawnFloatHeart, 420);
+      for(let i=0;i<10;i++) setTimeout(spawnFloatHeart, i*150);
+
+      /**********************
+       * Confetti party
+       **********************/
+      function partyBlast({ pieces = 90, durationMs = 1600 } = {}) {
+        const layer = document.createElement("div");
+        layer.className = "confetti-layer";
+        document.body.appendChild(layer);
+
+        const emojis = ["🎉", "✨", "💖", "🎊", "💘"];
+        const colors = ["#ff4d6d", "#ffd166", "#06d6a0", "#4dabf7", "#b197fc", "#f783ac"];
+
+        for (let i = 0; i < pieces; i++) {
+          const el = document.createElement("div");
+          el.className = "confetti";
+
+          const left = Math.random() * 100;
+          const fallTime = 900 + Math.random() * 900;
+
+          const useEmoji = Math.random() < 0.28;
+          if (useEmoji) {
+            el.style.width = "auto";
+            el.style.height = "auto";
+            el.style.fontSize = (12 + Math.random() * 18) + "px";
+            el.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+            el.style.background = "transparent";
+          } else {
+            el.style.background = colors[Math.floor(Math.random() * colors.length)];
+            const size = 6 + Math.random() * 10;
+            el.style.width = size + "px";
+            el.style.height = (size + 4) + "px";
+          }
+
+          el.style.left = left + "vw";
+          el.style.animationDuration = fallTime + "ms";
+          el.style.transform = `rotate(${Math.random() * 360}deg)`;
+
+          layer.appendChild(el);
+        }
+
+        setTimeout(() => layer.remove(), durationMs);
+      }
+
+      function showToast(text) {
+        const t = document.createElement("div");
+        t.className = "toast";
+        t.textContent = text;
+        document.body.appendChild(t);
+        setTimeout(() => t.remove(), 1600);
+      }
+
+      /**********************
+       * Heart burst
+       **********************/
+      function heartBurstFromRect(rect, count = 18){
+        const cx = rect.left + rect.width / 2;
+        const cy = rect.top + rect.height / 2;
+
+        for(let i=0;i<count;i++){
+          const h = document.createElement("div");
+          h.className = "burst-heart";
+          h.textContent = (Math.random()<0.25) ? "✨" : "💖";
+
+          const angle = Math.random() * Math.PI * 2;
+          const radius = 40 + Math.random() * 110;
+          const tx = cx + Math.cos(angle)*radius;
+          const ty = cy + Math.sin(angle)*radius;
+
+          h.style.setProperty("--tx", tx + "px");
+          h.style.setProperty("--ty", ty + "px");
+          h.style.fontSize = (16 + Math.random()*16) + "px";
+          h.style.opacity = (0.85 + Math.random()*0.15).toFixed(2);
+
+          h.style.transform = `translate(${cx}px, ${cy}px)`;
+          document.body.appendChild(h);
+          setTimeout(()=>h.remove(), 980);
+        }
+      }
+
+      /**********************
+       * Shooting stars
+       **********************/
+      function shootingStars(times = 3){
+        for(let i=0;i<times;i++){
+          setTimeout(()=>{
+            const s = document.createElement("div");
+            s.className = "shooting-star";
+            s.style.left = (-200 + Math.random()*200) + "px";
+            s.style.top  = (Math.random()*120) + "px";
+            document.body.appendChild(s);
+            setTimeout(()=>s.remove(), 1000);
+          }, i*220);
+        }
+      }
+
+      /**********************
+       * Clicking the message card = party + easter egg
+       **********************/
+      let cardClicks = 0;
+
+      messageCard.addEventListener("click", () => {
+        cardClicks++;
+        partyBlast({ pieces: 90 });
+        showToast("🎉 Your tap just made the page happier 💖");
+
+        if(cardClicks === 5){
+          showToast("Okay okay… I get it 😌 You’re adorable when you tap like that 💕");
+        }
+        if(cardClicks === 8){
+          showToast("Secret message: I’m already yours 💘");
+        }
+      });
+
+      // Prevent card-click when clicking buttons
+      [yesBtn, noBtn].forEach(btn => btn.addEventListener("click", (e)=>e.stopPropagation()));
+
+      /**********************
+       * 💔 Fake Crash Screen
+       **********************/
+      function showCrashScreen() {
+        if (document.getElementById("crashOverlay")) return;
+
+        partyBlast({ pieces: 120, durationMs: 1600 });
+        shootingStars(3);
+
+        const overlay = document.createElement("div");
+        overlay.className = "crash";
+        overlay.id = "crashOverlay";
+
+        overlay.innerHTML = `
+          <div class="crash-box">
+            <div class="crash-title">💔 ERROR: You cannot reject true love.</div>
+            <div class="crash-sub">
+              System detected a <strong>heart-connection</strong> that cannot be terminated.<br>
+              Please choose a valid option below 😌💖
+            </div>
+
+            <div class="crash-code">
+              <div>VALENTINE_EXCEPTION: LOVE_TOO_STRONG</div>
+              <div>at HeartModule.commitForever() 💘</div>
+              <div>at DestinyEngine.overrideDecision(YES) ✨</div>
+            </div>
+
+            <div class="crash-actions">
+              <button class="crash-accept" id="crashYes">Okay fine… YES 💕</button>
+              <button class="crash-try" id="crashTry">Retry NO (not recommended) 😅</button>
+            </div>
+          </div>
+        `;
+
+        document.body.appendChild(overlay);
+
+        overlay.addEventListener("click", (e) => {
+          if (e.target.id === "crashOverlay") {
+            document.getElementById("crashYes")?.click();
+          }
+        });
+
+        document.getElementById("crashYes").addEventListener("click", (e) => {
+          e.stopPropagation();
+          heartBurstFromRect(yesBtn.getBoundingClientRect(), 26);
+          overlay.remove();
+          yesBtn.click();
+        });
+
+        document.getElementById("crashTry").addEventListener("click", (e) => {
+          e.stopPropagation();
+          showToast("😌 NO is currently unavailable. Please select YES 💖");
+          heartBurstFromRect(noBtn.getBoundingClientRect(), 18);
+        });
+      }
+
+      /**********************
+       * NO runs away + crash ALWAYS (UPDATED)
+       **********************/
+      let noAttempts = 0;
+      let yesScale = 1;
+
+      function moveNoButton() {
+        const maxX = container.clientWidth - noBtn.offsetWidth;
+        const maxY = container.clientHeight - noBtn.offsetHeight;
+
+        noBtn.style.position = "absolute";
+        noBtn.style.left = (Math.random() * Math.max(1, maxX)) + "px";
+        noBtn.style.top  = (Math.random() * Math.max(1, maxY)) + "px";
+
+        noAttempts++;
+        yesScale = Math.min(1.28, 1 + noAttempts * 0.04);
+        yesBtn.style.transform = `scale(${yesScale})`;
+        yesBtn.style.filter = `brightness(${Math.min(1.18, 1 + noAttempts*0.03)})`;
+
+        heartBurstFromRect(yesBtn.getBoundingClientRect(), 8);
+      }
+
+      // Desktop: tease with hover
+      noBtn.addEventListener("mouseover", (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+        moveNoButton();
+      }, { passive: false });
+
+      // Mobile + Desktop press: move then crash (always)
+      noBtn.addEventListener("pointerdown", (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+
+        moveNoButton();
+
+        setTimeout(() => {
+          showCrashScreen();
+        }, 80);
+      }, { passive: false });
+
+      /**********************
+       * YES click: countdown -> final screen -> romance
+       **********************/
+      yesBtn.addEventListener("click", (e) => {
+        e.stopPropagation();
+
+        heartBurstFromRect(yesBtn.getBoundingClientRect(), 22);
+
+        yesBtn.disabled = true;
+        noBtn.disabled = true;
+        yesBtn.style.cursor = "default";
+        noBtn.style.cursor = "default";
+
+        const overlay = document.createElement("div");
+        overlay.className = "countdown";
+        overlay.textContent = "3";
+        messageCard.appendChild(overlay);
+
+        let n = 3;
+        const timer = setInterval(()=>{
+          n--;
+          overlay.textContent = n > 0 ? String(n) : "💖";
+          if(n <= 0){
+            clearInterval(timer);
+            setTimeout(showFinal, 380);
+          }
+        }, 700);
+
+        function showFinal(){
+          document.body.innerHTML = `
+            <div style="
+              height:100vh;
+              display:flex;
+              justify-content:center;
+              align-items:center;
+              font-family:system-ui;
+              text-align:center;
+              padding:40px;
+              color: ${getComputedStyle(document.documentElement).getPropertyValue('--text')};
+            ">
+              <div style="
+                max-width:760px;
+                background: linear-gradient(135deg, ${getComputedStyle(document.documentElement).getPropertyValue('--card1')}, ${getComputedStyle(document.documentElement).getPropertyValue('--card2')});
+                padding:38px;
+                border-radius:22px;
+                box-shadow:0 12px 35px rgba(0,0,0,0.18);
+                position: relative;
+              " id="finalCard">
+                <h1 style="margin:0 0 10px;">💖 Big Congratulations 💖</h1>
+
+                <p style="font-size:20px; line-height:1.6; margin: 12px 0;">
+                  You are officially, proudly, and forever<br>
+                  the Valentine of <strong>Sourabh Sharma (Sosuke)</strong> 💕
+                </p>
+
+                <p class="promise" style="font-size:20px; line-height:1.7; margin-top:18px;">
+                  <span>I choose you today.</span><br>
+                  <span>I’ll choose you tomorrow.</span><br>
+                  <span>And I will keep choosing you — always.</span>
+                </p>
+
+                <p style="font-size:22px; margin-top:26px;">
+                  💘 Happy Valentine’s Day, <strong>${herName || "my love"}</strong> 💘
+                </p>
+
+                <p style="opacity:.8; margin-top:16px; font-size:14px;">
+                  (Tap anywhere for more magic ✨)
+                </p>
+              </div>
+            </div>
+          `;
+
+          const style = document.createElement("style");
+          style.textContent = `
+            @keyframes fall{ to{ transform: translateY(110vh) rotate(720deg); opacity: 1; } }
+            .promise span{ display:inline-block; opacity:0; transform: translateY(8px); animation: riseIn 900ms ease forwards; }
+            .promise span:nth-child(1){ animation-delay: 0ms; }
+            .promise span:nth-child(2){ animation-delay: 600ms; }
+            .promise span:nth-child(3){ animation-delay: 1200ms; }
+            @keyframes riseIn{ to{ opacity:1; transform: translateY(0); } }
+          `;
+          document.head.appendChild(style);
+
+          partyBlast({ pieces: 140, durationMs: 1800 });
+          shootingStars(4);
+
+          document.body.addEventListener("click", () => {
+            partyBlast({ pieces: 80, durationMs: 1400 });
+            shootingStars(2);
+
+            const finalCard = document.getElementById("finalCard");
+            if(finalCard){
+              const r = finalCard.getBoundingClientRect();
+              heartBurstFromRect(r, 26);
+            }
+          });
+        }
+      });
+
+    });
+  </script>
+</body>
+</html>
